--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Karen Wamasali Portfolio</title>
+    <title>Karen Wamasali</title>
 </head>
 
 <body>
@@ -46,18 +46,17 @@
 
     <section id="intro">
       <p class="name">Hi, my name is <span>Karen Natozo Wamasali.</span></p>
-      <h2>I teach the web.</h2>
+      <h2>I build websites.</h2>
       <p>
-        I'm an educator specializing in HTML, CSS, user experience, and no-code
-        technologies.
+        I specialize in HTML, CSS, Javascript, NodeJs, React and Redux.
       </p>
       <p>
-        Currently, I'm creating courses for
+        Currently, I'm creating websites for
         <a
-          href="https://frontendmasters.com/teachers/jen-kramer/"
+          href="https://www.github.com/kwamasali"
           target="_blank"
-          >Frontend Masters</a
-        >.
+          >Freelance projects.</a
+        >
       </p>
     </section>
     <div class="gradient"></div>
@@ -83,7 +82,7 @@
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
-                    <li>SVG</li>
+                    <li>Javascript</li>
                 </ul>
                 </div>
                 <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png" alt="Screenshot of the Wall of Wonder." />
@@ -134,7 +133,7 @@
                     <section id="contact">
                         <h2>Contact me</h2>
                         <p>
-                            I'm always interested in hearing about new teaching opportunities, writing curricula, or instructional design work.
+                            I'm always interested in hearing about new working opportunities, learning, or full and part-time work.
                         </p>
                         <p><a href="mailto:k.wamasali@gmail.com" class="button">Email me</a></p>
                     </section>
